adapted testsuite for jdk17